--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "tailwind-merge": "3.3.1",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "1.0.7",
-    "zod": "3.25.67"
+    "valibot": "^1.0.5"
   },
   "devDependencies": {
     "wrangler": "4.21.x"
